# OpenGLMingW

./: CMakeLists.txt  README.md
src/: main.cpp
src/KISystem/: CMakeLists.txt  KIMemManager.cpp  KIMemManager.h  KISynchronize.cpp  KISynchronize.h  KISystem.cpp  KISystem.h
src/main/: main.cpp
src/rendering/: Shader.h
